# taskflow

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/errors/: mod.rs
src/models/: mod.rs  task.rs
src/routes/: mod.rs
static/: index.html
