[package]
name = "taskflow"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
axum = "0.8.6"
tracing-subscriber = "0.3.20"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
